# ArtifixerPlugin

./: .gitignore  __init__.py  plugin.py  pyproject.toml  requirements.txt
lichtfeld_artifixer_export.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
panels/: main_panel.py
schemas/: manifest_schema.json
services/: __init__.py  camera_sampler.py  dataset_writer.py  render_service.py  scene_adapter.py
tests/: demo_export.py
ui/: export_panel.py
