[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lichtfeld-artifixer-export"
version = "0.1.0"
description = "LichtFeld Studio plugin to export datasets compatible with NVIDIA ArtiFixer."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "Pillow>=10.0",
  "jsonschema>=4.21",
]

[tool.setuptools]
include-package-data = false
py-modules = ["plugin"]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "ui*", "tools*"]
exclude = ["tests*"]
